--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
       rel="stylesheet" />
   </head>
   <body>
-    <a href="">Clique aqui</a>
+    <header>
+      <div class="container">
+        <a href="" class="logo">
+          <img src="./img/logo.svg" alt="Logo da Hostinger" />
+        </a>
+        <nav>
+          <ul>
+            <li>
+              <a href="">
+                <img src="./img/icon-help.svg" alt="Ícone de Ajuda" />
+                <span>Precisa de ajuda?</span>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./img/icon-star.svg" alt="Ícone de Estrela" />
+                <span>Teste gratuitamente</span></a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
