--- a/index.html
+++ b/index.html
@@ -28,12 +28,35 @@
             <li>
               <a href="">
                 <img src="./img/icon-star.svg" alt="Ícone de Estrela" />
-                <span>Teste gratuitamente</span></a
-              >
+                <span>Teste gratuitamente</span>
+              </a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
+
+    <section class="s-hero">
+      <div class="container">
+        <div class="text">
+          <h1>Ferramenta de e-mail marketing perfeita para sua empresa!</h1>
+          <p>
+            Aproveite o potencial do e-mail marketing para ganhar vendas e
+            fortalecer seu relacionamento com clientes.
+          </p>
+          <button>Teste gratuitamente</button>
+          <div class="conheca">
+            <div class="icon">
+              <img src="./img/icon-arrow.svg" alt="Ícone de seta" />
+            </div>
+            <span>Conheça os recursos</span>
+          </div>
+        </div>
+
+        <div class="image">
+          <img src="./img/ilustra.svg" alt="Ilustração da hero section" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
