--- a/index.html
+++ b/index.html
@@ -58,5 +58,70 @@
         </div>
       </div>
     </section>
+
+    <section class="s-resources">
+      <div class="container">
+        <div class="top">
+          <h2>
+            Conheça os recursos da ferramenta de e-mail marketing KingHost
+          </h2>
+          <p>Mais de 5.000 empresas que utilizam ✌️</p>
+        </div>
+        <div class="content">
+          <div class="card-featured">
+            <div class="icon">
+              <img src="./img/icone-alcance.svg" alt="Alcance Mais" />
+            </div>
+            <div class="info">
+              <h3>Alcance mais</h3>
+              <p>
+                Aumente o tráfego do seu site e suas vendas utilizando o e-mail
+                marketing.
+              </p>
+            </div>
+          </div>
+          <ul>
+            <li>
+              <div class="icon">
+                <img src="./img/icone-gaste-menos.svg" alt="Gaste Menos" />
+              </div>
+              <div class="info">
+                <h3>Gaste menos</h3>
+                <p>
+                  Com a ferramenta você faz envios em massa, gastando menos de
+                  R$ 0,01 por mensagem!
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img
+                  src="./img/icone-autonomia.svg"
+                  alt="Autonimia e Resultado" />
+              </div>
+              <div class="info">
+                <h3>Autonomia e resultado</h3>
+                <p>
+                  Crie listas de contatos, campanhas e ainda analise o resultado
+                  de cada envio.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="./img/icone-alcance.svg" alt="Templates King" />
+              </div>
+              <div class="info">
+                <h3>Templates King</h3>
+                <p>
+                  Modelos prontos para cada tipo de e-mail: newsletter,
+                  lançamento, campanha de vendas e outros.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
